# communications

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  TODO  communications.kdev4  parameters.xml
algorithms/: Algorithm.cpp  Algorithm.h  CDMAunknownActiveUsersSISopt.cpp  CDMAunknownActiveUsersSISopt.h  CDMAunknownActiveUsersSISoptWithNoUsersActivityKnowledge.cpp  CDMAunknownActiveUsersSISoptWithNoUsersActivityKnowledge.h  CMEBasedAlgorithm.cpp  CMEBasedAlgorithm.h  CMEapplyingAlgorithm.cpp  CMEapplyingAlgorithm.h  CMakeLists.txt  DSISoptAlgorithm.cpp  DSISoptAlgorithm.h  FRSsBasedUserActivityDetectionAlgorithm.cpp  FRSsBasedUserActivityDetectionAlgorithm.h  ISIS.cpp  ISIS.h  KalmanFilterAwareMMSEBasedAlgorithm.cpp  KalmanFilterAwareMMSEBasedAlgorithm.h  KnownChannelAlgorithm.cpp  KnownChannelAlgorithm.h  KnownChannelOrderAlgorithm.cpp  KnownChannelOrderAlgorithm.h  KnownFlatChannelAndActiveUsersOptimalAlgorithm.cpp  KnownFlatChannelAndActiveUsersOptimalAlgorithm.h  KnownFlatChannelOptimalAlgorithm.cpp  KnownFlatChannelOptimalAlgorithm.h  KnownSymbolsCMEapplyingAlgorithm.cpp  KnownSymbolsCMEapplyingAlgorithm.h  KnownSymbolsKalmanBasedChannelEstimatorAlgorithm.cpp  KnownSymbolsKalmanBasedChannelEstimatorAlgorithm.h  LinearFilterBasedAlgorithm.cpp  LinearFilterBasedAlgorithm.h  LinearFilterBasedAlgorithmWithKnownChannel.cpp  LinearFilterBasedAlgorithmWithKnownChannel.h  LinearFilterBasedCMEapplyingAlgorithm.cpp  LinearFilterBasedCMEapplyingAlgorithm.h  LinearFilterBasedMKFAlgorithm.cpp  LinearFilterBasedMKFAlgorithm.h  LinearFilterBasedSMCAlgorithm.cpp  (+47 more)
detection/: CMakeLists.txt  DecorrelatorDetector.cpp  DecorrelatorDetector.h  EmbeddedICSOSMMSEDetector.cpp  EmbeddedICSOSMMSEDetector.h  KalmanFilterAwareMMSEDetector.cpp  KalmanFilterAwareMMSEDetector.h  LinearDetector.cpp  LinearDetector.h  MMSEDetector.cpp  MMSEDetector.h  RMMSEDetector.cpp  RMMSEDetector.h  SOSMMSEDetector.cpp  SOSMMSEDetector.h
estimation/: APPbasedChannelOrderEstimator.cpp  APPbasedChannelOrderEstimator.h  AugmentedObservationsKalmanEstimator.cpp  AugmentedObservationsKalmanEstimator.h  CDMAKalmanEstimator.cpp  CDMAKalmanEstimator.h  CDMAKnownChannelChannelMatrixEstimator.cpp  CDMAKnownChannelChannelMatrixEstimator.h  CDMARLSEstimator.cpp  CDMARLSEstimator.h  CMakeLists.txt  ChannelMatrixEstimator.cpp  ChannelMatrixEstimator.h  ChannelOrderEstimator.cpp  ChannelOrderEstimator.h  KalmanEstimator.cpp  KalmanEstimator.h  KalmanEstimatorDecorator.cpp  KalmanEstimatorDecorator.h  KnownChannelChannelMatrixEstimator.cpp  KnownChannelChannelMatrixEstimator.h  KnownSymbolsKalmanEstimator.cpp  KnownSymbolsKalmanEstimator.h  KnownSymbolsNObservationsKalmanEstimator.cpp  KnownSymbolsNObservationsKalmanEstimator.h  LMSEstimator.cpp  LMSEstimator.h  LinearFilterAwareNoiseVarianceAdjustingKalmanEstimator.cpp  LinearFilterAwareNoiseVarianceAdjustingKalmanEstimator.h  LinearFilterAwareNoiseVarianceAdjustingKalmanEstimatorDecorator.cpp  LinearFilterAwareNoiseVarianceAdjustingKalmanEstimatorDecorator.h  MultipleKFsEstimator.cpp  MultipleKFsEstimator.h  NLMSEstimator.cpp  NLMSEstimator.h  RLSEstimator.cpp  RLSEstimator.h
smc/: CMakeLists.txt  Particle.cpp  Particle.h  ParticleFilter.cpp  ParticleFilter.h  ParticleWithChannelEstimation.cpp  ParticleWithChannelEstimation.h  ParticleWithChannelEstimationAndActiveUsers.cpp  ParticleWithChannelEstimationAndActiveUsers.h  ParticleWithChannelEstimationAndChannelOrderAPP.cpp  ParticleWithChannelEstimationAndChannelOrderAPP.h  ParticleWithChannelEstimationAndLinearDetection.cpp  ParticleWithChannelEstimationAndLinearDetection.h  ParticleWithChannelEstimationAndLinearDetectionAndActiveUsers.cpp  ParticleWithChannelEstimationAndLinearDetectionAndActiveUsers.h  ParticleWithChannelEstimationAndLinearDetectionAndChannelOrderEstimation.cpp  ParticleWithChannelEstimationAndLinearDetectionAndChannelOrderEstimation.h  ParticleWithMultipleChannelsEstimationAndMultipleChannelOrderApp.cpp  ParticleWithMultipleChannelsEstimationAndMultipleChannelOrderApp.h  ResamplingCriterion.cpp  ResamplingCriterion.h  WithActiveUsersParticleAddon.cpp  WithActiveUsersParticleAddon.h  WithChannelEstimationParticleAddon.cpp  WithChannelEstimationParticleAddon.h  WithChannelOrderAppParticleAddon.cpp  WithChannelOrderAppParticleAddon.h  WithChannelOrderEstimationParticleAddon.h  WithLinearDetectionParticleAddon.cpp  WithLinearDetectionParticleAddon.h  WithMultipleChannelOrderAppParticleAddon.cpp  WithMultipleChannelOrderAppParticleAddon.h  WithMultipleChannelsEstimationParticleAddon.cpp  WithMultipleChannelsEstimationParticleAddon.h  smcExceptions.h
systems/: ARparametersComparisonCDMASystem.cpp  ARparametersComparisonCDMASystem.h  BaseSystem.cpp  BaseSystem.h  CDMASystem.cpp  CDMASystem.h  CMakeLists.txt  ChannelOrderEstimationSystem.cpp  ChannelOrderEstimationSystem.h  Elsevier2007ARChannelSystem.cpp  Elsevier2007ARChannelSystem.h  Elsevier2007BesselChannelSystem.cpp  Elsevier2007BesselChannelSystem.h  Elsevier2007System.cpp  Elsevier2007System.h  ISWCS10.cpp  ISWCS10.h  ISWCS10System.cpp  ISWCS10System.h  ISWCS10numberOfSurvivorsImpactSystem.cpp  ISWCS10numberOfSurvivorsImpactSystem.h  LMSmuTestSystem.cpp  LMSmuTestSystem.h  PSPvsPSPBasedSMCSystem.cpp  PSPvsPSPBasedSMCSystem.h  PSPvsSMCSystem.cpp  PSPvsSMCSystem.h  PlainSystem.cpp  PlainSystem.h  Rev2TVT2007System.cpp  Rev2TVT2007System.h  SMCSystem.cpp  SMCSystem.h  TVT2007System.cpp  TVT2007System.h  TesisComplejidadReducidaARSystem.cpp  TesisComplejidadReducidaARSystem.h  TesisComplejidadReducidaBesselNumeroParticulasSystem.cpp  TesisComplejidadReducidaBesselNumeroParticulasSystem.h  TesisComplejidadReducidaBesselSystem.cpp  (+11 more)
transmission/: Alphabet.cpp  Alphabet.h  Bits.cpp  Bits.h  CMakeLists.txt  ChannelDependentNoise.cpp  ChannelDependentNoise.h  Demodulator.cpp  Modulator.cpp  Noise.cpp  Noise.h  NullNoise.cpp  NullNoise.h  PowerProfileDependentNoise.cpp  PowerProfileDependentNoise.h  SingleUserChannelDependentNoise.cpp  SingleUserChannelDependentNoise.h  SingleUserPowerProfileDependentNoise.cpp  SingleUserPowerProfileDependentNoise.h  TransmissionUtil.cpp  (+2 more)
(+543 files in other folders)
