include_directories(.
		    ${PROJECT_SOURCE_DIR}/util
		    ${PROJECT_SOURCE_DIR}/random
		    ${PROJECT_SOURCE_DIR}/statistics
		    ${PROJECT_SOURCE_DIR}/filters
		    ${PROJECT_SOURCE_DIR}/detection
		    ${PROJECT_SOURCE_DIR}/detection/trellis
		    ${PROJECT_SOURCE_DIR}/smc
		    ${PROJECT_SOURCE_DIR}/smc/resampling
		    ${PROJECT_SOURCE_DIR}/transmission
		    ${PROJECT_SOURCE_DIR}/transmission/channel
		    ${PROJECT_SOURCE_DIR}/transmission/channel/delayPowerProfile
		    ${PROJECT_SOURCE_DIR}/algorithms
		    ${PROJECT_SOURCE_DIR}/algorithms/USIS2SIS
		    ${PROJECT_SOURCE_DIR}/estimation)
ADD_LIBRARY (systems STATIC
		    BaseSystem
		    CDMASystem
		    ARparametersComparisonCDMASystem
		    ChannelOrderEstimationSystem
		    Elsevier2007ARChannelSystem
		    Elsevier2007BesselChannelSystem
		    Elsevier2007System
		    LMSmuTestSystem
		    PSPvsPSPBasedSMCSystem
		    PSPvsSMCSystem
		    Rev2TVT2007System
		    SMCSystem
		    TesisComplejidadReducidaBesselNumeroParticulasSystem
		    TesisComplejidadReducidaSystem
		    TesisOrdenCanalDesconocidoSystem
		    TVT2007System
		    WSA08System
		    PlainSystem
			ISWCS10System
			ISWCS10numberOfSurvivorsImpactSystem)
TARGET_LINK_LIBRARIES (systems
		      util
		      statistics
		      transmission
		      channel
		      delayPowerProfile
		      detection
		      smc
		      resampling
		      filters
		      algorithms
			  USIS2SIS)