include_directories(. 
		    ./channel
		    ./channel/delayPowerProfile
		    ${PROJECT_SOURCE_DIR}/util
		    ${PROJECT_SOURCE_DIR}/random
		    ${PROJECT_SOURCE_DIR}/statistics)
ADD_LIBRARY (transmission STATIC 
			  Alphabet
			  Bits
			  ChannelDependentNoise
			  SingleUserChannelDependentNoise
			  Demodulator
			  Modulator
			  Noise
			  NullNoise
			  PowerProfileDependentNoise
			  SingleUserPowerProfileDependentNoise
			  TransmissionUtil)
add_subdirectory(channel)