AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(comunicaciones, 0.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_OUTPUT(Makefile src/Makefile transmision/Makefile randomutil/Makefile statistics/Makefile util/Makefile filters/Makefile estimation/Makefile algorithms/Makefile)
