AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(comunicaciones, 0.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_OUTPUT(Makefile algorithms/Makefile algorithms/USIS2SIS/Makefile com/Makefile \
	detection/Makefile detection/trellis/Makefile estimation/Makefile filters/Makefile \
	randomutil/Makefile smc/Makefile src/Makefile statistics/Makefile transmision/Makefile \
	util/Makefile)
