

# set the include path found by configure
INCLUDES = -I$(top_srcdir)/. -I$(top_srcdir)/algorithms \
	-I$(top_srcdir)/detection -I$(top_srcdir)/estimation -I$(top_srcdir)/filters \
	-I$(top_srcdir)/randomutil -I$(top_srcdir)/smc -I$(top_srcdir)/statistics \
	-I$(top_srcdir)/transmision -I$(top_srcdir)/util $(all_includes)

# the library search path.


noinst_HEADERS = exceptions.h oneChannelOrderPerTransmitAntenna.h types.h
_SOURCES = defines.h
