INCLUDES = -I$(top_srcdir)/randomutil -I$(top_srcdir)/src \
	-I$(top_srcdir)/statistics -I$(top_srcdir)/util
METASOURCES = AUTO
lib_LIBRARIES = libstatistics.a
noinst_HEADERS = ARprocess.h StatUtil.h UsersActivityDistribution.h
libstatistics_a_SOURCES = ARprocess.cpp StatUtil.cpp \
	UsersActivityDistribution.cpp
