INCLUDES = -I$(top_srcdir)/estimation -I$(top_srcdir)/src \
	-I$(top_srcdir)/transmision -I$(top_srcdir)/util -I/usr/include/eigen2/
METASOURCES = AUTO
lib_LIBRARIES = libtrellis.a
noinst_HEADERS = PSPPath.h PSPPathCandidate.h PathCandidate.h Trellis.h \
	ViterbiPath.h
libtrellis_a_SOURCES = PSPPath.cpp Trellis.cpp ViterbiPath.cpp
